--- a/CourseManagementSystem.API/ClientApp/src/app/components/course-detail/course-detail.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/course-detail/course-detail.component.html
@@ -4,7 +4,7 @@
     <b>Course Id:</b> {{courseId}}
   </div>
   <div *ngIf="!isCourseAdmin" class="my-3">
-    <button class="btn btn-success" routerLink="/students/{{currentCourseMemberId}}">My Grades</button>
+    <button class="btn btn-success" (click)="pageNavigator.navigateToStudentDetail(currentCourseMemberId)">My Grades</button>
   </div>
 </div>
 
