--- a/CourseManagementSystem.API/ClientApp/src/app/components/course-list/course-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/course-list/course-list.component.html
@@ -3,7 +3,7 @@
   <table class="table table-striped table-responsive">
     <tr *ngFor="let course of memberCourses">
       <td>
-        <a routerLink="/courses/{{course.id}}">{{course.name}}</a>
+        <a class="btn btn-link" (click)="pageNavigator.navigateToCourseDetail(course.id)">{{course.name}}</a>
       </td>
     </tr>
   </table>
@@ -14,7 +14,7 @@
   <table class="table table-striped table-responsive">
     <tr *ngFor="let course of managedCourses">
       <td>
-        <a routerLink="/courses/{{course.id}}">{{course.name}}</a>
+        <a class="btn btn-link" (click)="pageNavigator.navigateToCourseDetail(course.id)">{{course.name}}</a>
       </td>
       <td>
         <button class="btn btn-danger" (click)="removeCourse(course.id)">Remove</button>
