--- a/CourseManagementSystem.API/ClientApp/src/app/components/student-quiz-submissions/student-quiz-submissions.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/student-quiz-submissions/student-quiz-submissions.component.html
@@ -3,7 +3,7 @@
   <table class="table table-striped table-responsive">
     <tr *ngFor="let submission of quizSubmissions">
       <td>
-        <a routerLink="/submissions/{{submission.testSubmissionId}}">{{submission.testTopic}}</a>
+        <a class="btn btn-link" (click)="pageNavigator.navigateToSubmissionReview(submission.testSubmissionId)">{{submission.testTopic}}</a>
       </td>
     </tr>
   </table>
