--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-list/test-list.component.html
@@ -5,9 +5,9 @@
     <table class="table table-striped table-responsive">
       <tr *ngFor="let test of this.nonPublishedTests">
         <td>
-          <a routerLink="/tests/{{test.id}}">{{test.topic}}</a>
+          <a class="btn btn-link" (click)="pageNavigator.navigateToAssignmentDetail(test.id)">{{test.topic}}</a>
         </td>
-        <td>
+        <td class="align-middle">
           <b>Deadline: {{dateTimeFormatter.formatToLocal(test.deadline)}}</b>
         </td>
         <td>
@@ -27,8 +27,8 @@
     <table class="table table-striped table-responsive">
       <tr *ngFor="let test of this.activeTests">
         <td>
-          <a *ngIf="isCourseAdmin" routerLink="/tests/{{test.id}}">{{test.topic}}</a>
-          <a *ngIf="!isCourseAdmin" routerLink="/tests/submit/{{test.id}}">{{test.topic}}</a>
+          <a *ngIf="isCourseAdmin" class="btn btn-link" (click)="pageNavigator.navigateToAssignmentDetail(test.id)">{{test.topic}}</a>
+          <a *ngIf="!isCourseAdmin" class="btn btn-link" (click)="pageNavigator.navigateToAssignmentSubmission(test.id)">{{test.topic}}</a>
         </td>
         <td>
           <b>Deadline: {{dateTimeFormatter.formatToLocal(test.deadline)}}</b>
@@ -44,7 +44,7 @@
     <table class="table table-striped table-responsive">
       <tr *ngFor="let test of this.testsAfterDeadline">
         <td>
-          <a routerLink="/tests/{{test.id}}">{{test.topic}}</a>
+          <a class="btn btn-link" (click)="pageNavigator.navigateToAssignmentDetail(test.id)">{{test.topic}}</a>
         </td>
         <td>
           <b>{{courseTestUtils.isGradedToString(test.isGraded)}}</b>
@@ -53,7 +53,7 @@
     </table>
   </div>
   <div class="my-3">
-    <button *ngIf="isCourseAdmin" class="btn btn-success" routerLink="/tests/create/{{this.courseId}}">
+    <button *ngIf="isCourseAdmin" class="btn btn-success" (click)="pageNavigator.navigateToAssignmentCreation(this.courseId)">
       Create new test
     </button>
   </div>
