vertical centering of text in <td> elements

--- a/CourseManagementSystem.API/ClientApp/src/app/components/admin-list/admin-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/admin-list/admin-list.component.html
@@ -6,7 +6,7 @@
       <th></th>
     </tr>
     <tr *ngFor="let admin of admins">
-      <td>{{admin.name}}</td>
+      <td class="align-middle">{{admin.name}}</td>
       <td>
         <button class="btn btn-danger" (click)="removeAdmin(admin.id)">Remove</button>
       </td>
