--- a/CourseManagementSystem.API/ClientApp/src/app/components/enrollment-request-list/enrollment-request-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/enrollment-request-list/enrollment-request-list.component.html
@@ -7,8 +7,7 @@
       <h3>Enrollment requests</h3>
       <table class="table table-striped table-responsive">
         <tr *ngFor="let request of enrollmentRequests">
-          <td>{{request.personName}}</td>
-          <td>{{request.personEmail}}</td>
+          <td class="align-middle">{{request.personName}}</td>
           <td>
             <button class="btn btn-success" (click)="approve(request)">
               Approve
