test replaces by assignment in HTML

--- a/CourseManagementSystem.API/ClientApp/src/app/components/student-test-submissions/student-test-submissions.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/student-test-submissions/student-test-submissions.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h3>Tests</h3>
+  <h3>Graded assignments</h3>
   <table class="table table-striped table-responsive">
     <tr>
       <th>Topic</th>
