--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-edit/test-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-edit/test-edit.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-md-10 order-md-1">
     <div class="jumbotron">
-      <h2>Edit a test</h2>
+      <h2>Edit the assignment</h2>
     </div>
     <div class="jumbotron">
       <div class="form-group">
@@ -13,7 +13,7 @@
                name="testTopic">
       </div>
       <div class="form-group">
-        <div>Is this test graded?</div>
+        <div>Is this assignment graded?</div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedTrue"
