--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-create/test-create.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-create/test-create.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="col-md-10 order-md-1">
     <div class="jumbotron">
-      <h2>Create new test</h2>
+      <h2>Create new assignment</h2>
     </div>
     <form class="jumbotron">
       <div class="form-group">
@@ -12,7 +12,7 @@
         <input type="text" class="form-control" id="testTopic" [(ngModel)]="testToCreate.topic" name="testTopic">
       </div>
       <div class="form-group">
-        <div>Is this test graded?</div>
+        <div>Is this assignment graded?</div>
 
         <div class="form-check">
           <input class="form-check-input" type="radio" name="testIsGraded" id="testIsGradedTrue"
@@ -55,7 +55,7 @@
       </div>
     </form>
     <div class="jumbotron" *ngIf="testToCreate.questions.length > 0">
-      <h4>Create the test</h4>
+      <h4>Create the assignment</h4>
       <button type="button" class="btn btn-success" (click)="createTest()">
         Create
       </button>
