--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-list/test-list.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-list/test-list.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h3>Tests</h3>
+  <h3>Assignments</h3>
   <div *ngIf="isCourseAdmin && nonPublishedTests.length > 0">
     <h6>Not published</h6>
     <table class="table table-striped table-responsive">
@@ -54,7 +54,7 @@
   </div>
   <div class="my-3">
     <button *ngIf="isCourseAdmin" class="btn btn-success" (click)="pageNavigator.navigateToAssignmentCreation(this.courseId)">
-      Create new test
+      Create new assignment
     </button>
   </div>
 </div>
