--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-submission-review/test-submission-review.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-submission-review/test-submission-review.component.html
@@ -19,7 +19,7 @@
       <h3>Question {{answer.questionNumber}}</h3>
       <app-test-question-text [questionText]="answer.questionText"
                               [questionType]="answer.questionType"></app-test-question-text>
-      <h6>Your answer </h6>
+      <h6>Submitted answer</h6>
       <p class="formattedText">
         {{answer.answerText}}
       </p>
