small changes in button texts

--- a/CourseManagementSystem.API/ClientApp/src/app/components/test-question-edit/test-question-edit.component.html
+++ b/CourseManagementSystem.API/ClientApp/src/app/components/test-question-edit/test-question-edit.component.html
@@ -49,7 +49,7 @@
     <input type="number" min="1" max="10" class="form-control" id="answerCountInput"
            [(ngModel)]="this.possibleAnswersCount"
            name="answerCount">
-    <button type="button" class="btn btn-primary" (click)="updateChoicesCount()">Apply</button>
+    <button type="button" class="btn btn-primary mt-2" (click)="updateChoicesCount()">Apply</button>
   </div>
 
   <div class="mb-2">
